<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PasswordGeneratorActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/generated_password"
        android:inputType="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:editable="false"
        android:textIsSelectable="true"
        android:hint="@string/password_placeholder" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_uppercase"
        android:id="@+id/checkbox_uppercase"
        android:layout_marginTop="25dp"
        android:checked="true"
        android:layout_below="@+id/generated_password" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_lowercase"
        android:id="@+id/checkbox_lowercase"
        android:layout_below="@+id/checkbox_uppercase"
        android:layout_marginTop="10dp"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_numbers"
        android:id="@+id/checkbox_numbers"
        android:layout_below="@+id/checkbox_lowercase"
        android:layout_marginTop="10dp"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_special"
        android:id="@+id/checkbox_special"
        android:checked="false"
        android:layout_alignTop="@+id/checkbox_uppercase"
        android:layout_toRightOf="@+id/checkbox_uppercase"
        android:layout_marginLeft="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/checkbox_numbers"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_default_material_light"
            android:text="@string/textview_length"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="2"
            android:maxLength="2"
            android:gravity="center_horizontal"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="5dp"

            android:text="@string/default_password_length"
            android:id="@+id/password_length" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_minus"
            android:id="@+id/button_minus" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_plus"
            android:id="@+id/button_plus" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_generate_password"
        android:id="@+id/button_generate_password"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="30dp" />
</RelativeLayout>
</ScrollView>
