<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.de_coder.hamedpa.passmaker.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <Button
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/b1"
        android:id="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/b2"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/b3"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="800dp"
        android:layout_height="85dp"
        android:id="@+id/imageView2"
        android:background="@drawable/line"
        android:layout_below="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@mipmap/icon"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
